fix x modal on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -446,7 +446,9 @@ header img {
     right: 0;
     margin-right: 1.5em;
     color: white;
+    background-color: rgba(0,0,0,0.0);
     font-size: 1.5em;
+    border: none;
     text-shadow: 1px 0px 2px black;
     cursor: pointer;
     z-index: 9999;
